# machinelearning-labs

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt
apps/lab2/: lab2_titanic.cpp  person.cpp  person.hpp
results/lab1_knn/: lab1_labels.txt
